--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<head>
+<html>
+  <head>
     <title>Fiber and Pokemons</title>
-</head>
-<body>
-    <h1>{{.title}}</h1>
-    <div>
+    <link rel="stylesheet" href="/assets/tailwind.css" />
+    <link rel="stylesheet" href="/assets/global.css" />
+  </head>
+  <body>
+    <main class="p-5">
+      <h1 class="text-3xl font-bold">Pokemon</h1>
+      <form id="form" action="/search">
+        <input
+        name="name"
+        type="text"
+        id="search"
+        placeholder="Search"
+        class="border border-gray-400 p-2 rounded-lg w-full mt-5 text-black"
+      />
+      </form>
+      <div
+        class="grid grid-cols-[15%_25%_10%_10%_10%_10%_10%_10%] mt-3"
+        id="table"
+      >
+        <div class="font-bold">Name</div>
+        <div class="font-bold">Type</div>
+        <div class="font-bold">HP</div>
+        <div class="font-bold">Attack</div>
+        <div class="font-bold">Defense</div>
+        <div class="font-bold">Sp. Attack</div>
+        <div class="font-bold">Sp. Defense</div>
+        <div class="font-bold">Speed</div>
+
         {{range .pokemons}}
-        <p>{{ .Name}} (lol)</p>
+        <div class="font-bold">{{ .Name }}</div>
+        <div>{{ .Type }}</div>
+        <div>{{ .Hp }}</div>
+        <div>{{ .Attack }}</div>
+        <div>{{ .Defense }}</div>
+        <div>{{ .SpecialAttack }}</div>
+        <div>{{ .SpecialDefense }}</div>
+        <div>{{ .Speed }}</div>
         {{end}}
-    </div>
-    <script src="/assets/test.js"></script>
-</body>
+      </div>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="/assets/app.js"></script>
+  </body>
 </html>
