--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Fiber and Pokemons</title>
-    <link rel="stylesheet" href="/assets/tailwind.css" />
-    <link rel="stylesheet" href="/assets/global.css" />
+    <link rel="stylesheet" href="/public/tailwind.css" />
   </head>
   <body>
     <main class="p-5">
@@ -32,7 +31,7 @@
 
         {{range .pokemons}}
         <div class="font-bold">{{ .Name }}</div>
-        <div>{{ .Type }}</div>
+        <div>{{range .Type}}{{.}}, {{end}}</div>
         <div>{{ .Hp }}</div>
         <div>{{ .Attack }}</div>
         <div>{{ .Defense }}</div>
@@ -42,7 +41,6 @@
         {{end}}
       </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="/assets/app.js"></script>
+    <script src="/public/app.js"></script>
   </body>
 </html>
